# CSC340GroupProject

./: CMakeLists.txt  README.md  main.cpp
Alan/: CompanyProcessor.cpp  CompanyProcessor.h  MovieCSVReader.cpp  MovieCSVReader.h  main.cpp
Jed/: ActorDirectorProcessor.cpp  ActorDirectorProcessor.h  main.cpp
Kobe/: ActorsProfit.h  ActorsProfitProcessor.cpp  ActorsProfitprocessor.h  main.cpp
Tommy/: Movie.cpp  Movie.h  MovieReader.cpp  MovieReader.h  main  main.cpp  movie.h
